--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/config.env
+/config/config.env
 
 npm-debug.log*
 yarn-debug.log*
