--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
 PORT=5000
-MONGO_URI=mongodb+srv://admin:admin@sandbox.mfdyx.mongodb.net/expenseTracker?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://????:?????@sandbox.mfdyx.mongodb.net/expenseTracker?retryWrites=true&w=majority
